<resources>
    <string name="app_name">Rosselier</string>

    <string name="navigation_drawer_open">open navigation</string>
    <string name="navigation_drawer_close">close navigation</string>
    <string name="messagehint">Message</string>
    <string name="register">Register</string>
    <string name="group_sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="date_birth">Date of Birth</string>
    <string name="email">Email Address</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="confirm">Change Image</string>
    <string name="status">Status</string>
    <string name="login">Login</string>
    <string name="name_drink">Name of Drink</string>
    <string name="price">Price</string>
    <string name="allrating">All Rate:</string>
    <string name="your_rating">Your Rate:</string>
    <string name="all_rate_number">12</string>
    <string name="tv_introduce_drink">Introduce Drink</string>
    <string name="infro_introduce"> Content Indtroduce</string>
    <string name="comment">Comment</string>
    <string name="status_still_sell">Still Sell</string>
    <string name="add_drink">Add Drink</string>
    <string name="image_emty">You are not chosing image yet</string>
    <string name="status_off_sell">Stop Selling</string>
    <string name="status_coming_soon">Is Going To Sell</string>
    <string name="error404sever">Lost Connect To Sever</string>
    <string name="add_drink_fail">Add new Drink unsuccess</string>
    <string name="add_drink_success">Add new Drink success</string>
    <string name="edt_emty">please enter to the your information in the box</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="add_favorist_drink">Add to Favorist Drink</string>
    <string name="buy">Send Order</string>
    <string name="number_drink">1</string>
    <string name="check">Check</string>
    <string name="check_user_name">check user name</string>
    <string name="check_email">check email</string>
    <string name="pay">All Drink Price</string>
    <string name="title_pay">pay</string>
    <string name="card_number">card number</string>
    <string name="update_account">Update Account</string>
    <string name="change">Change</string>
</resources>
