<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imv_drink"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/tv_erro_not_add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_emty"
                android:layout_below="@+id/imv_drink"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:visibility="invisible"/>
            <ImageView
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_10"
                android:src="@drawable/ic_camera_alt_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_name_drink"
                android:hint="@string/name_drink"
                android:layout_below="@id/tv_erro_not_add_image"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_price_drink"
                android:inputType="numberSigned"
                android:hint="@string/price"
                android:layout_below="@id/edt_name_drink"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"

                android:id="@+id/edt_intro_drink"
                android:hint="@string/tv_introduce_drink"
                android:layout_below="@id/edt_price_drink"/>
            <RadioGroup
                android:id="@+id/rdg_status_drink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_intro_drink">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rdbtn_still_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_light"
                    android:text="@string/status_still_sell"/>
                <RadioButton
                    android:id="@+id/rdbtn_coming_soon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_coming_soon"
                    android:textColor="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/rdbtn_off_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/status_off_sell"/>
            </RadioGroup>
            <Button
                android:id="@+id/btn_add_drink"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rdg_status_drink"
                android:text="@string/add_drink"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btn_cancel"
                android:layout_below="@+id/btn_add_drink"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>