<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cafebackground"
        android:scaleType="fitXY"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1A000000">
            <TextView
                android:id="@+id/image_registen_logo"
                android:layout_margin="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#fff"
                android:gravity="center"
                android:textSize="@dimen/dp_50"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_username"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/user_name"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_check_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_user_name"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_password"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_fullname"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_dateofbirth"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/date_birth" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/relative_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_sex"
                    android:textSize="@dimen/dp_20"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"/>
                <RadioGroup
                    android:id="@+id/rdg_sex_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_btn_mail"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/male"

                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/radio_btn_femail"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        />
                </RadioGroup>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_email"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_check_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_email"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtinputedt_phonenumber"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registen_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/register"
                android:background="@drawable/shaped_button_form_login_registion"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>