<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_pay"
        android:textSize="@dimen/dp_50"
        android:gravity="center"/>
    <TextView
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/tv_user_name"
        android:textSize="@dimen/dp_20"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_seri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:drawableLeft="@drawable/ic_vietnam"
            android:drawablePadding="@dimen/dp_10"
            android:id="@+id/txtinputedt_seri"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/card_number"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:id="@+id/tv_price"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000VND"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_numgber_price"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pay:"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000VND"
            android:id="@+id/tv_number_pay"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>