<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imv_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:src="@drawable/capuchino"
        android:scaleType="center"/>
    <TextView
        android:id="@+id/tv_name_drink_detail"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_drink"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_alignBottom="@id/imv_detail"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_5"
        android:id="@+id/tv_all_rating"
        android:layout_below="@id/imv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allrating"/>
    <RatingBar
        android:theme="@style/RatingBar"
        android:layout_margin="@dimen/dp_5"
        android:id="@+id/rb_all_rating"
        android:layout_below="@id/imv_detail"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_your_rating"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/tv_all_rate_number_detail"
        android:layout_margin="@dimen/dp_5"
        android:layout_below="@id/imv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rb_all_rating"
        android:text="@string/all_rate_number"/>
    <ImageView
        android:layout_margin="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_half_black_24dp"
        android:layout_toRightOf="@id/tv_all_rate_number_detail"
        android:layout_below="@id/imv_detail"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_5"
        android:id="@+id/tv_your_rating"
        android:layout_below="@id/tv_all_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_rating"/>
    <RatingBar
        android:isIndicator="false"
        android:stepSize="0.5"
        android:theme="@style/RatingBar"
        android:id="@+id/rb_your_rating"
        android:layout_margin="@dimen/dp_5"
        android:layout_below="@id/rb_all_rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_your_rating"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/tv_your_number_rate_detail"
        android:layout_margin="@dimen/dp_5"
        android:layout_below="@+id/tv_all_rate_number_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rb_your_rating"
        android:text="@string/all_rate_number"/>
    <ImageView
        android:layout_margin="@dimen/dp_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_half_black_24dp"
        android:layout_toRightOf="@id/tv_your_number_rate_detail"
        android:layout_below="@id/tv_all_rate_number_detail"/>
    <TextView
        android:textColor="@color/black"
        android:paddingLeft="@dimen/dp_5"
        android:id="@+id/tv_introduce_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_introduce_drink"
        android:layout_below="@id/tv_your_rating"
        android:textStyle="bold"/>
    <TextView
        android:textColor="@color/black"
        android:padding="@dimen/dp_10"
        android:id="@+id/tv_introduce_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infro_introduce"
        android:layout_below="@id/tv_introduce_text"/>
    <TextView
        android:textColor="@color/gray"
        android:id="@+id/tv_cmt_text"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_below="@id/tv_introduce_drink"/>
    <View
        android:id="@+id/v_line"
        android:layout_margin="@dimen/dp_5"
        android:background="@color/black"
        android:layout_below="@id/tv_cmt_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_view"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_line"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</RelativeLayout>