<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shaped_toolbar"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/iamgev_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/dp_50"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:id="@+id/edt_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/user_name"
                android:drawablePadding="40dp"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="40dp"
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login"
            android:textColor="@color/textforbackgroundwhite"
            android:text="@string/login"
            />
        <Button
            android:background="@drawable/shaped_registin_button"
            android:id="@+id/btn_login_registen"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#E0E0E0"
            />
    </LinearLayout>
</LinearLayout>