<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shaped_toolbar"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/cimg_avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>
        <ImageButton
            android:id="@+id/imgbtn_camera_pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/cimg_avatar"
            android:layout_alignTop="@id/cimg_avatar"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="-4dp"
            android:padding="4dp"
            android:background="@drawable/white_circle"
            android:src="@drawable/ic_camera_alt_black_24dp"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/cimg_avatar"
            android:layout_alignRight="@id/cimg_avatar"
            android:layout_marginTop="6dp"
            android:layout_below="@id/cimg_avatar"
            android:minHeight="26dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:background="@drawable/green_button"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:textSize="12sp"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"/>
    </RelativeLayout>
    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tv_username"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/img_status"
            android:src="@drawable/ofline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_user_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>